# PassiveInvestment

./: .gitignore  Makefile  pyproject.toml  requirements.txt  ruff.toml
data/: etf_weights.json  etfs.json
notebooks/: comparison.ipynb
